--- a/main.css
+++ b/main.css
@@ -1,8 +1,66 @@
-.alert-box{
+.alert-box {
     background: rgb(82, 82, 223);
     color: blue;
     padding: 20px;
     border-radius: 5px;
     display: none;
-    
+
+}
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url('images/main.jpg');
+    background-size: cover;
+    opacity: 0.7;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1 {
+    position: absolute;
+    left: -2000px;
+}
+
+header img {
+    margin-right: 360px;
+}
+
+nav ul {
+    list-style: none;
+    margin-left: auto;
+    display: flex;
+}
+
+nav ul li {
+    padding: 20px 5px; width: 110px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.container {
+    width: 1270px;
+    margin: 0 auto;
+    margin-right: 40px;
+    display: flex;
+    align-items: center;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: black;
+    display: block;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
 }
