--- a/main.css
+++ b/main.css
@@ -20,31 +20,41 @@ body::before {
     opacity: 0.7;
 }
 
-header {
+#header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-header h1 {
+#header h1 {
     position: absolute;
     left: -2000px;
 }
 
-header img {
+#header img {
     margin-right: 360px;
 }
 
-nav ul {
+#header nav ul {
     list-style: none;
     margin-left: auto;
     display: flex;
 }
 
-nav ul li {
+#header nav ul li {
     padding: 20px 5px; width: 110px;
     text-align: center;
     font-weight: bold;
+}
+
+#header nav ul li a {
+    text-decoration: none;
+    color: black;
+    display: block;
+}
+
+#header nav ul li a:hover {
+    text-decoration: underline;
 }
 
 .container {
@@ -53,14 +63,4 @@ nav ul li {
     margin-right: 40px;
     display: flex;
     align-items: center;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: black;
-    display: block;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
 }
